<resources>
    <string name="app_name">不累APP</string>
    <string name="toast_tip_exit">再按一次退出</string>
    <!--  注册登录  -->
    <string name="login_title_verify">手机号登录/注册</string>
    <string name="login_title_password">密码登录</string>
    <string name="login_title_register">注册账号</string>
    <string name="login_title_tip">未注册的手机号登录成功后将自动登录</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_verify_code">请输入验证码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_button_get_verify">获取验证码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_verify">验证码登录</string>
    <string name="login_button_forget_password">忘记密码</string>
    <string name="login_resend_verify_code">重新发送</string>
    <!--  忘记密码 验证码登录  -->
    <string name="forget_password_next">下一步</string>
    <string name="forget_input_verify">输入验证码</string>
    <string name="forget_send_verify_tip">已发送4位验证码至</string>
    <string name="forget_sure">确定</string>
    <string name="forget_resend">重发短信验证码</string>
    <string name="forget_resend_timer">秒后重新获取</string>
</resources>