<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.VerifyCodeFragment">

    <ImageView
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/forget_verify_back"
        android:src="@mipmap/forget_password_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/forget_input_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/forget_verify_code_tip"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/forget_send_verify_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/forget_input_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:paddingStart="20dp"
                android:background="@drawable/login_input"
                android:digits="0123456789"
                android:gravity="center_vertical"
                android:hint="@string/login_input_verify_code"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry,TextFields" />
        </LinearLayout>

        <Button
            android:id="@+id/forget_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forget_sure"
            android:background="@drawable/login_button_yellow"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forget_resend"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/login_button"
            android:text="@string/forget_resend"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</FrameLayout>